fix: Change scrollbar to be compatible with Firefox

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,6 @@
 		display: flex;
 		background-image: url('./background.png');
 		background-repeat: no-repeat;
-		background-size: cover;
 	}
 
 	&__content {
@@ -14,7 +13,7 @@
 		margin-right: auto;
 		margin-left: auto;
 		padding-bottom: 2.5rem;
-		overflow-y: scroll;
+		overflow-y: auto;
 
 		@media only screen and(min-width: 1100px) {
 			min-width: var(--content-width);
