--- a/src/components/home/friendSuggestions/FriendSuggestions.scss
+++ b/src/components/home/friendSuggestions/FriendSuggestions.scss
@@ -13,7 +13,6 @@
 		width: 100%;
 		display: flex;
 		align-items: center;
-		overflow-x: scroll;
 
 		& .UserCardSmall {
 			margin-right: 2.5rem;
